@startuml
!include InternHunterStyle.puml

skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR

package UI <<Rectangle>> {
interface Ui <<Interface>>
class "{abstract}\nUiPart" as UiPart
class UiManager
class MainWindow
class HelpWindow
class InternshipWindow
class PopupWindow
class Tabs
class CommandBox
class ResultDisplay

class "{abstract}\nCard" as Card
class InformationDisplay
class ListPanel

class CompanyCard
class ApplicationCard
class ProfileCard
class InternshipCard

class CompanyDisplay
class ApplicationDisplay
class ProfileDisplay

class ApplicationListPanel
class CompanyListPanel
class ProfileListPanel
class InternshipListPanel
}

hide members

package Model <<Rectangle>> {
class HiddenModel #FFFFFF
}
UI -down[hidden]-> Model
package Logic <<Rectangle>> {
class HiddenLogic #FFFFFF
}

class HiddenOutside #FFFFFF
HiddenOutside ..> Ui

UiManager .left.|> Ui
UiManager -up-> Logic
UiManager --> MainWindow

MainWindow -up-> Logic
MainWindow *-right-> ListPanel
MainWindow *-left-> InformationDisplay
MainWindow *--> ResultDisplay
MainWindow *--> CommandBox
MainWindow *--> Tabs
MainWindow --> HelpWindow
MainWindow --> InternshipWindow

ApplicationDisplay -left-|> InformationDisplay
CompanyDisplay -left-|> InformationDisplay
ProfileDisplay -left-|> InformationDisplay

ApplicationListPanel -left-|> ListPanel
CompanyListPanel -left-|> ListPanel
ProfileListPanel -left-|> ListPanel
InternshipListPanel -left-|> ListPanel

ApplicationListPanel *--> ApplicationCard
CompanyListPanel *--> CompanyCard
ProfileListPanel *--> ProfileCard
InternshipListPanel *--> InternshipCard

ApplicationCard --|> Card
CompanyCard --|> Card
ProfileCard --|> Card
InternshipCard --|> Card

HelpWindow --|> PopupWindow
InternshipWindow --|> PopupWindow

Card -down-|> UiPart
PopupWindow -down-|> UiPart
ResultDisplay -down-|> UiPart
MainWindow -down-|> UiPart
MainWindow -[hidden]-|> UiPart
CommandBox -down-|> UiPart
Tabs -down-|> UiPart
InformationDisplay -down-|> UiPart

ApplicationCard ..>Model
ProfileCard ..> Model
CompanyCard ..> Model

InternshipCard .[hidden].> UiPart
InternshipCard ..> Model

ApplicationDisplay ..> Model
CompanyDisplay ..> Model
ProfileDisplay ..> Model

UiPart .[hidden].> Model

@enduml
